# Ayanna

./: .bash_history  .gitignore  OPENWEBUI.md  README.md  docker-compose.yml  environment.yml  hdr.txt  pyproject.toml  requirements.txt
SimSwap/: .gitignore  environment.yml  test_video_swapsingle.py
SimSwap/dlScripts/: dl_antelope.py  dl_insightface.py
SimSwap/insightface_func/: face_detect_crop_single.py
SimSwap/models/: fs_model.py
docker/: .dockerignore  Dockerfile
docker/auto1111/: Dockerfile
scripts/: mp_test_script.py
src/imgseg/app/: main.py
src/imgseg/inference/: segment.py
src/imgseg/train/: train.py
src/posed/app/: main.py
src/posed/inference/: poseDetect.py
src/posed/mediapipe/: draw.py  mpPoseDetect.py
