[tool.poetry]
name = "posed"
version = "0.1.0"
description = "FastAPI API for pose detection using MediaPipe and other frameworks."
authors = ["Suhail <suhailece@gmail.com>"]
packages = [{ include = "posed", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10, <4.0"
mediapipe = "*"
opencv-python = "*"
numpy = "*"
pillow = "*"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
